--- a/style.css
+++ b/style.css
@@ -26,12 +26,12 @@ body, .card-info{
   margin: 0;
 }
 
-body, main > div{
+body, .main-ctn > div{
   display: flex;
 }
 
 body, .btn{
-  background-color: var(--vLightGray);
+  background: var(--vLightGray);
 }
 
 /***** General Styles *****/
@@ -56,6 +56,7 @@ main{
 
 main > div{
   flex-direction: column; /* MOBILE: col || DESKTOP: row */
+  justify-content: center;
 }
 
 .main-ctn section{
@@ -96,18 +97,18 @@ main > div{
 }
 
 .btn-ctn{
-  margin-top: 2.5rem;
+  margin: 2.5rem 0 0;
 }
 
 .btn:hover, .btn:active{
   color: var(--transparentWhite) !important;
-  background-color: unset;
+  background: unset;
   border: 3px solid var(--transparentWhite);
   cursor: pointer;
 }
 
 /***** CTN-1 *****/
-.card-1-container{ background-color: var(--brightOrange); }
+.card-1-container{ background: var(--brightOrange); }
 section:nth-child(1) > div.btn-ctn > .btn{ color: var(--brightOrange); }
 
 .main-ctn section:nth-child(1){
@@ -115,11 +116,11 @@ section:nth-child(1) > div.btn-ctn > .btn{ color: var(--brightOrange); }
 }
 
 /***** CTN-2 *****/
-.card-2-container{ background-color: var(--darkCyan); }
+.card-2-container{ background: var(--darkCyan); }
 section:nth-child(2) > div.btn-ctn > .btn{ color: var(--darkCyan); }
 
 /***** CTN-3 *****/
-.card-3-container{ background-color: var(--vDarkCyan); }
+.card-3-container{ background: var(--vDarkCyan); }
 section:nth-child(3) > div.btn-ctn > .btn{ color: var(--vDarkCyan); }
 
 .main-ctn section:nth-child(3){
