--- a/media.css
+++ b/media.css
@@ -29,6 +29,10 @@
     margin: 3.25rem 0 0;
   }
 
+  .btn{
+    font-size: 0.75rem;
+  }
+
   /***** CTN-1 *****/
   .main-ctn section:nth-child(1){
     border-radius: 15px 0 0 15px;
@@ -57,6 +61,10 @@
     height: 185px;
   }
 
+  .btn{
+    font-size: 0.85rem;
+  }
+
   main{
     margin: 10vh 12.5vw; /* ADJUST: Margin of main-ctn */
   }
@@ -68,6 +76,12 @@
     padding-right: 2rem;
   }
   
+  .card-main-info{
+    height: 190px;
+  }
+}
+
+@media screen and (min-width:1440px) {
   .card-main-info{
     height: 160px;
   }
